--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "description": "",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc --project tsconfig.build.json && vite build",
     "preview": "vite preview"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@turf/turf": "^7.2.0",
     "maplibre-gl": "^4.5.0",
+    "rbush": "^3.0.1",
     "tinyqueue": "^3.0.0",
     "vue": "^3.4.31"
   },
   "devDependencies": {
     "@types/node": "^24.0.13",
+    "@types/rbush": "^3.0.3",
     "@vitejs/plugin-vue": "^5.0.5",
     "typescript": "^5.5.3",
     "vite": "^5.3.3",
