refactor: Overhaul map rendering and data generation This commit introduces a significant refactor of the map rendering and data generation pipeline.
Key changes in `src/components/map/Map.vue`:
- Implemented a static tile rendering system with a custom tile grid for improved performance.
- Added logic to switch between static and dynamic tile loading.
- Fixed several build errors related to unused variables.

Key changes in `src/mapgen/gen_data.cjs`:
- Created an orchestrator script to run the multi-step data generation process.
- Modularized the data generation steps into separate scripts.
- Introduced configuration for features to extract and different areas of interest.

Other notable changes:
- Updated dependencies in `package.json`.
- Added extensive documentation in `data.md` explaining the new data pipeline and static tile system.
- Removed several unused files.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
             "command": "bash",
             "args": [
                 "-c",
-                "cd '${workspaceFolder}' && rm -rf public/data/* temp/*"
+                "cd '${workspaceFolder}' && rm -rf public/data/step_* temp/*"
             ],
             "group": "build",
             "presentation": {
@@ -25,68 +25,12 @@
             "type": "shell",
             "command": "node",
             "args": [
-                "${workspaceFolder}/src/mapgen/process_osm_data.cjs"
+                "${workspaceFolder}/src/mapgen/gen_data.cjs"
             ],
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "shared",
-                "showReuseMessage": false,
-                "clear": true
-            },
-            "problemMatcher": []
-        },
-        {
-            "label": "Gen Structure",
-            "type": "shell",
-            "command": "node",
-            "args": [
-                "${workspaceFolder}/src/mapgen/generate-structure.cjs"
-            ],
-            "group": "build",
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "shared",
-                "showReuseMessage": false,
-                "clear": true
-            },
-            "problemMatcher": []
-        },
-        {
-            "label": "Gen Min Structure",
-            "type": "shell",
-            "command": "node",
-            "args": [
-                "${workspaceFolder}/src/mapgen/generate-structure.cjs",
-                "--minified"
-            ],
-            "group": "build",
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": true,
-                "panel": "shared",
-                "showReuseMessage": false,
-                "clear": true
-            },
-            "problemMatcher": []
-        },
-        {
-            "label": "Generate Tiles",
-            "type": "shell",
-            "command": "bash",
-            "args": [
-                "-c",
-                "rm -rf '${workspaceFolder}/temp' && mkdir -p '${workspaceFolder}/temp' && java -cp '${workspaceFolder}/data/tools/planetiler.jar' com.onthegomap.planetiler.custommap.ConfiguredMapMain --schema=${workspaceFolder}/public/city-profile.yml --output=${workspaceFolder}/temp/almaty.mbtiles --maxzoom=15 --force && rm -rf '${workspaceFolder}/public/tiles' && pip3 install --user mbutil && mb-util '${workspaceFolder}/temp/almaty.mbtiles' '${workspaceFolder}/public/tiles' --image_format=pbf"
-            ],
-            "group": "build",
             "presentation": {
                 "echo": true,
                 "reveal": "always",
