--- a/package.json
+++ b/package.json
@@ -7,22 +7,32 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --project tsconfig.build.json && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "maplibre-gl": "^4.5.0",
+    "geojson-vt": "^4.0.2",
+    "lineclip": "^1.1.5",
+    "ol": "^9.1.0",
+    "polygon-clipping": "^0.15.3",
     "rbush": "^3.0.1",
-    "tinyqueue": "^3.0.0",
-    "vue": "^3.4.31"
+    "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.4",
     "@types/node": "^24.0.13",
     "@types/rbush": "^3.0.3",
     "@vitejs/plugin-vue": "^5.0.5",
-    "typescript": "^5.5.3",
-    "vite": "^5.3.3",
+    "@vue/tsconfig": "^0.5.1",
+    "fs-extra": "^11.3.0",
+    "minimist": "^1.2.8",
+    "npm-run-all2": "^6.1.2",
+    "pbf": "^4.0.1",
+    "typescript": "~5.4.0",
+    "vite": "^5.2.8",
+    "vt-pbf": "^3.1.3",
     "vue-tsc": "^3.0.1"
   }
 }
