--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@turf/bbox": "^7.2.0",
+    "@turf/boolean-point-in-polygon": "^7.2.0",
+    "@turf/helpers": "^7.2.0",
+    "@types/pixi.js": "^5.0.0",
     "geojson-vt": "^4.0.2",
+    "js-angusj-clipper": "^1.3.1",
     "lineclip": "^1.1.5",
     "ol": "^9.1.0",
+    "pixi.js": "^8.11.0",
     "polygon-clipping": "^0.15.3",
     "rbush": "^3.0.1",
+    "simplify-js": "^1.2.4",
     "vue": "^3.4.21"
   },
   "devDependencies": {
