feat(mapgen): Refactor data pipeline to TypeScript > > This commit refactors the entire map data generation pipeline from CommonJS JavaScript modules (.cjs) to TypeScript (.ts). This improves type safety, maintainability, and consistency with the main application codebase. > > Key changes include: > - Migration of all scripts in `src/mapgen` to TypeScript. > - Introduction of `tsconfig.node.json` for the Node.js build process. > - Updated `data.md` to document the new, more sophisticated pipeline, including steps like data simplification (S6/S7), unification, and navmesh generation. > - New data loaders and utility functions to support the new data formats (`S7BuildingsLoader.ts`, `LogicMapDataLoader.ts`). > - Adjustments to geometry processing logic (`ClipperProvider.ts`, `geometryUtils.ts`, `unite.ts`). > - Updated package dependencies to support the new TypeScript build process.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,9 +23,12 @@
         {
             "label": "Process OSM",
             "type": "shell",
-            "command": "node",
+            "command": "npm",
             "args": [
-                "${workspaceFolder}/src/mapgen/gen_data.cjs"
+                "run",
+                "ts-node",
+                "--",
+                "${workspaceFolder}/src/mapgen/gen_data.ts"
             ],
             "group": {
                 "kind": "build",
