--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "vue-tsc --project tsconfig.build.json && vite build",
     "preview": "vite preview",
-    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
+    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
+    "ts-node": "TS_NODE_PROJECT=tsconfig.node.json node --import=tsx"
   },
   "author": "",
   "license": "ISC",
@@ -28,18 +29,24 @@
     "vue": "^3.4.21"
   },
   "devDependencies": {
-    "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^24.0.13",
-    "@types/rbush": "^3.0.3",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/tsconfig": "^0.5.1",
-    "fs-extra": "^11.3.0",
-    "minimist": "^1.2.8",
-    "npm-run-all2": "^6.1.2",
-    "pbf": "^4.0.1",
-    "typescript": "~5.4.0",
-    "vite": "^5.2.8",
-    "vt-pbf": "^3.1.3",
-    "vue-tsc": "^3.0.1"
+    "@tsconfig/node20": "20.1.4",
+    "@types/fs-extra": "11.0.4",
+    "@types/geojson-vt": "^3.2.5",
+    "@types/lineclip": "1.1.1",
+    "@types/minimist": "1.2.5",
+    "@types/node": "24.0.13",
+    "@types/rbush": "3.0.3",
+    "@vitejs/plugin-vue": "5.0.5",
+    "@vue/tsconfig": "0.5.1",
+    "fs-extra": "11.3.0",
+    "minimist": "1.2.8",
+    "npm-run-all2": "6.1.2",
+    "pbf": "4.0.1",
+    "ts-node": "10.9.2",
+    "tsx": "^4.20.3",
+    "typescript": "5.4.5",
+    "vite": "5.2.8",
+    "vt-pbf": "3.1.3",
+    "vue-tsc": "3.0.1"
   }
 }
