--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/lineclip": "1.1.1",
     "@types/minimist": "1.2.5",
     "@types/node": "24.0.13",
+    "@types/poly2tri": "^1.4.0",
     "@types/rbush": "3.0.3",
     "@vitejs/plugin-vue": "5.0.5",
     "@vue/tsconfig": "0.5.1",
@@ -42,6 +43,7 @@
     "minimist": "1.2.8",
     "npm-run-all2": "6.1.2",
     "pbf": "4.0.1",
+    "poly2tri": "^1.5.0",
     "ts-node": "10.9.2",
     "tsx": "^4.20.3",
     "typescript": "5.4.5",
