refactor: rename polies to tris for navmesh clarity - Renamed all instances of 'poly' to 'tri' in the C++ and TypeScript codebase to more accurately reflect that the navmesh is composed of triangles. - This affects variable names, function names, and data structures related to navigation. - Added a new 'new_navmesh.md' with a plan for a new navmesh generation process. - Implemented rotation speed for agent's 'look' direction to make them turn more smoothly. - Adjusted sprite rendering to handle non-square textures and scale sprites appropriately.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "ts-node": "TS_NODE_PROJECT=tsconfig.node.json node --import=tsx",
-    "build:wasm": "source /mnt/WoB/WOB/web_rep/emsdk/emsdk_env.sh && make -C src/wasm"
+    "build:wasm": ". /mnt/WoB/WOB/web_rep/emsdk/emsdk_env.sh && make -C src/wasm"
   },
   "author": "",
   "license": "ISC",
