feat: implement proper polygonalization and efficient geometric tests
- Implement proper polygonalization algorithms replacing previous approach
- Add efficient point-in-triangle and point-in-polygon test implementations
- Optimize navmesh generation with new polygonization methods
- Add comprehensive benchmarking for geometric operations
- Refactor WASM facade and math utilities for better performance
- Remove deprecated Hertel-Mehlhorn implementation
- Add new WASM impulse system and benchmarking infrastructure
- Update debug tools and visualization components
- Enhance raycasting and spatial indexing capabilities

--- a/src/wasm/Makefile
+++ b/src/wasm/Makefile
@@ -26,7 +26,10 @@ SRCS = main.cpp \
        populate_triangle_index.cpp \
        populate_polygon_index.cpp \
        populate_building_index.cpp \
-       populate_blob_index.cpp
+       populate_blob_index.cpp \
+       point_in_triangle_bench.cpp \
+       point_in_polygon_bench.cpp \
+       wasm_impulse.cpp
 
 OBJDIR = ../../temp
 # Build all object files into OBJDIR to keep paths consistent
@@ -47,8 +50,8 @@ EMCC_FLAGS = \
   -s ASSERTIONS=0 \
   -s SAFE_HEAP=0 \
   -s MALLOC=dlmalloc \
-  -s INITIAL_MEMORY=67108864 \
-  -s MAXIMUM_MEMORY=67108864 \
+  -s INITIAL_MEMORY=536870912 \
+  -s MAXIMUM_MEMORY=536870912 \
   -s ALLOW_MEMORY_GROWTH=1 \
   -s AGGRESSIVE_VARIABLE_ELIMINATION=1 \
   -s ELIMINATE_DUPLICATE_FUNCTIONS=1 \
@@ -56,7 +59,7 @@ EMCC_FLAGS = \
   -s DISABLE_EXCEPTION_THROWING=0 \
   -s DISABLE_EXCEPTION_CATCHING=1 \
   -s USE_WEBGL2=1 -s MIN_WEBGL_VERSION=2 -s MAX_WEBGL_VERSION=2 \
-  -s "EXPORTED_FUNCTIONS=['_init_agents', '_init_navmesh_from_bin', '_finalize_init', '_set_rng_seed', '_set_rng_seed_js', '_set_constants_buffer', '_sprite_renderer_init', '_sprite_upload_atlas_rgba', '_sprite_upload_frame_table', '_render', '_set_renderer_debug', '_wasm_alloc', '_wasm_free', '_get_g_navmesh_ptr', '_get_navmesh_bbox_ptr', '_get_spatial_index_data']" \
+  -s "EXPORTED_FUNCTIONS=['_init_agents', '_init_navmesh_from_bin', '_finalize_init', '_set_rng_seed', '_set_rng_seed_js', '_set_constants_buffer', '_sprite_renderer_init', '_sprite_upload_atlas_rgba', '_sprite_upload_frame_table', '_render', '_set_renderer_debug', '_wasm_alloc', '_wasm_free', '_get_g_navmesh_ptr', '_get_navmesh_bbox_ptr', '_get_spatial_index_data', '_wasm_impulse']" \
   -s "EXPORTED_RUNTIME_METHODS=['ccall', 'cwrap', 'HEAPU8', 'HEAP32', 'HEAPU32', 'HEAPF32']" \
   -s MODULARIZE=1 \
   -s EXPORT_ES6=0 \
