feat: implement polygon-based pathfinding and optimize navigation systems
- Implement polygon-based pathfinding algorithm for improved navigation
- Optimize pathfinding systems for better performance and accuracy
- Refactor path corners and corridor algorithms
- Improve agent navigation and movement physics
- Add new navmesh utilities and priority queue implementation
- Update WASM agent navigation and utility functions
- Enhance debug tools and scene state management
- Remove deprecated pathCorridorByEdge.ts implementation
- Optimize raycasting and drawing systems

--- a/src/wasm/Makefile
+++ b/src/wasm/Makefile
@@ -18,6 +18,7 @@ SRCS = main.cpp \
        path_corners.cpp \
        agent_move_phys.cpp \
        agent_navigation.cpp \
+       agent_nav_utils.cpp \
        agent_grid.cpp \
        agent_collision.cpp \
        agent_statistic.cpp \
