fixed pathfinding bugs, tuned A* heuristics

--- a/src/wasm/Makefile
+++ b/src/wasm/Makefile
@@ -16,6 +16,7 @@ SRCS = main.cpp \
        fast_priority_queue.cpp \
        path_corridor.cpp \
        path_corners.cpp \
+       path_patching.cpp \
        agent_move_phys.cpp \
        agent_navigation.cpp \
        agent_nav_utils.cpp \
@@ -60,7 +61,7 @@ EMCC_FLAGS = \
   -s DISABLE_EXCEPTION_THROWING=0 \
   -s DISABLE_EXCEPTION_CATCHING=1 \
   -s USE_WEBGL2=1 -s MIN_WEBGL_VERSION=2 -s MAX_WEBGL_VERSION=2 \
-  -s "EXPORTED_FUNCTIONS=['_init_agents', '_init_navmesh_from_bin', '_finalize_init', '_set_rng_seed', '_set_rng_seed_js', '_set_constants_buffer', '_sprite_renderer_init', '_sprite_upload_atlas_rgba', '_sprite_upload_frame_table', '_render', '_set_renderer_debug', '_wasm_alloc', '_wasm_free', '_get_g_navmesh_ptr', '_get_navmesh_bbox_ptr', '_get_spatial_index_data', '_wasm_impulse']" \
+  -s "EXPORTED_FUNCTIONS=['_init_agents', '_init_navmesh_from_bin', '_finalize_init', '_set_rng_seed', '_set_rng_seed_js', '_set_constants_buffer', '_sprite_renderer_init', '_sprite_upload_atlas_rgba', '_sprite_upload_frame_table', '_render', '_set_renderer_debug', '_wasm_alloc', '_wasm_free', '_get_g_navmesh_ptr', '_get_navmesh_bbox_ptr', '_get_spatial_index_data', '_wasm_impulse', '_test_find_corridor']" \
   -s "EXPORTED_RUNTIME_METHODS=['ccall', 'cwrap', 'HEAPU8', 'HEAP32', 'HEAPU32', 'HEAPF32']" \
   -s MODULARIZE=1 \
   -s EXPORT_ES6=0 \
