feat(ai): external bot AI with brain cells and event buffer
Introduce external AI layer for agents and an event-driven pipeline linking TS and WASM.

Highlights:

- Add modular AI in TS with three brain cells (extensible behavior units) in src/logic/agents/ai/Brain.ts.

- Implement cross-layer event queue: TS EventBuffer + WASM event_buffer.{h,cpp} and event_handler.{h,cpp}.

- Bridge events into Agent/GameState and wire through WasmFacade; add wasm_log.h for structured logs.

- Update agent navigation and spawner to use external AI decisions; adjust visuals and initialization paths.

- Add AgentConfigs for tunable bot parameters.

- Update/clean WASM sources and Makefile; patch navigation, model, and indexes for event support.

- Docs: add wasm_events.md, update troubleshooting; remove obsolete wasm_agents.md.

Files touched include TS logic, agent modules, and multiple src/wasm/*.

--- a/src/wasm/Makefile
+++ b/src/wasm/Makefile
@@ -31,7 +31,9 @@ SRCS = main.cpp \
        populate_blob_index.cpp \
        point_in_triangle_bench.cpp \
        point_in_polygon_bench.cpp \
-       wasm_impulse.cpp
+       wasm_impulse.cpp \
+       event_buffer.cpp \
+       event_handler.cpp
 
 OBJDIR = ../../temp
 # Build all object files into OBJDIR to keep paths consistent
