feat(dev-ui, wasm, nav): refactor dev UI, add selected-agent corridor API/visuals, and improve raycasting
- Move debug UI into src/components/ui/devUI/; remove old UI components and update App.vue imports. Add new panels (DevAgentExplorer stub, DevNavExplorer, CoordsPanel, etc.) and centralize context menu in Overlay.
- Add lightweight per-frame update bus (src/logic/FrameUpdate.ts) and dispatch from main loop.
- Extend WASM/TS bridge:
  - TS: add WasmFacade.setSelectedWAgentIdx, requestAgentCorridorByIndex, and getAgentCorridorByIndex.
  - C++: add set_selected_wagent_idx and get_agent_corridor exports; broadcast EVT_SELECTED_CORRIDOR at end of simulation.
  - TS: handle EVT_SELECTED_CORRIDOR in EventHandler and store on dynamicScene.
- Visualize selected agent path: draw corridor polys and path corners/lines in DrawDynamicScene.
- Raycasting: return blocking edge vertex indices and blocking triangle; keep corridor fully walkable; mirror fixes in both TS and C++ implementations.
- Path patching: fix next-corner tri when inserting offset corner.
- Brain: add debug ray/edge/point visuals while wandering.
- Agent configs/state: add AgentConfigs.crazy; tweak defaults for dev (disable wAgent spawns, wagentsLimit=0).
- Utilities: add useAgentClipboard to copy JS/WASM agent state (with corridor) to clipboard.
- Misc: ignore src/wasm/.cache; add .clangd and compile_commands.json; minor VSCode config updates.

BREAKING CHANGE: dev UI components moved under src/components/ui/devUI/ and some legacy components removed. Update imports accordingly.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ public/wasm_module.wasm
 public/tiles
 dist-ssr
 *.local
+src/wasm/.cache
+compile_commands.json
 
 # Editor directories and files
 .idea
